# ai_programmer

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml  nightly-e2e.yml
agents/developer/: README.md  pyproject.toml
agents/developer/src/developer/: __init__.py  adapter.py  agent.py  models.py  sandbox_client.py  tools.py
agents/developer/tests/: conftest.py  test_adapter.py  test_agent.py  test_agent_integration.py  test_smoke.py
agents/planner/: README.md  pyproject.toml
agents/planner/src/planner/: __init__.py  adapter.py  agent.py  models.py  pricing.py
agents/planner/tests/: test_planner.py  test_planner_integration.py  test_smoke.py
apps/console/: README.md  package.json
apps/console/src/app/: layout.tsx  page.tsx
docs/: PROGRESS.md
docs/adr/: 0001-langgraph-orchestrator.md  0002-graphify-crg-retrieval.md  0003-firecracker-sandbox.md  0004-opa-policy-engine.md  0005-supervisor-pattern.md  0006-verifier-reviewer-split.md
docs/tasks/phase-0/: 00-README.md  01-postgres-schema.md  02-prompts-package.md  03-orchestrator-skeleton.md  04-planner-agent.md  05-verifier-service.md  06-sandbox-docker.md  07-context-provider.md  08-developer-agent.md  09-task-cli.md  10-otel-tracing.md  11-smoke-test.md  12-db-checkpointer.md
prompts/: README.md  pyproject.toml  versions.toml
prompts/src/prompts/: __init__.py  registry.py
prompts/src/prompts/versions/developer/: build@v1.md
prompts/src/prompts/versions/planner/: plan@v1.md
prompts/tests/: test_registry.py  test_smoke.py
services/context-provider/: README.md  pyproject.toml
services/context-provider/src/context_provider/: __init__.py  main.py  models.py  router.py  service.py
services/context-provider/src/context_provider/mcp_clients/: __init__.py  crg.py  graphify.py
services/context-provider/tests/: test_router.py  test_service.py  test_service_integration.py  test_smoke.py
services/orchestrator/: README.md  pyproject.toml
services/orchestrator/src/orchestrator/: __init__.py  graph.py  main.py  persistence.py  protocols.py  state.py  verifier_client.py
services/orchestrator/tests/: conftest.py  test_graph.py  test_smoke.py  test_verifier_client.py
services/sandbox/: README.md  pyproject.toml
services/sandbox/src/sandbox/: Dockerfile  __init__.py  controller.py  main.py  models.py  service.py
services/sandbox/tests/: test_controller.py  test_controller_unit.py  test_service.py  test_smoke.py
services/task-api/: README.md  pyproject.toml
services/task-api/src/task_api/: __init__.py  cli.py  main.py  routes.py  runner.py  schemas.py  store.py
services/task-api/tests/: test_cli.py  test_routes.py  test_routes_integration.py  test_smoke.py
services/verifier/: README.md  pyproject.toml
services/verifier/src/verifier/: __init__.py  main.py  models.py  service.py
services/verifier/src/verifier/runners/: pnpm.py
services/verifier/tests/: test_runners.py  test_service.py  test_smoke.py
services/verifier/tests/fixtures/failing-project/: biome.json  package.json
services/verifier/tests/fixtures/failing-project/src/: math.test.ts  math.ts
services/verifier/tests/fixtures/passing-project/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
services/verifier/tests/fixtures/passing-project/src/: math.test.ts
target-repos/demo-lib/: README.md  package.json
target-repos/demo-lib/src/: math.test.ts  strings.test.ts  strings.ts
tests/e2e/: _db.py  conftest.py  stub_mcp.py  test_hello_world_task.py  test_verifier_failure_terminates.py
