[project]
name = "platform-developer"
version = "0.0.1"
description = "Developer agent: ReAct loop that edits code in the sandbox."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/developer"]
