[project]
name = "platform-planner"
version = "0.0.1"
description = "Planner agent: decomposes a submitted task into a plan."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/planner"]
