[project]
name = "platform-context-provider"
version = "0.0.1"
description = "Single retrieval gateway wrapping Graphify + CRG for all agents."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/context_provider"]
