[project]
name = "platform-context-provider"
version = "0.0.1"
description = "Single retrieval gateway wrapping Graphify + CRG for all agents."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/context_provider"]
