[project]
name = "platform-orchestrator"
version = "0.0.1"
description = "LangGraph orchestrator: outer Plan/Build/Verify/Ship FSM."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]
