[project]
name = "platform-task-api"
version = "0.0.1"
description = "FastAPI HTTP service plus CLI for task submission."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_api"]
