[project]
name = "platform-task-api"
version = "0.0.1"
description = "FastAPI HTTP service plus CLI for task submission."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.0",
    "httpx>=0.27",
    "click>=8.1",
    "platform-db",
    "platform-orchestrator",
    "platform-telemetry",
]

[project.scripts]
platform-cli = "task_api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_api"]

[tool.uv.sources]
platform-db = { workspace = true }
platform-orchestrator = { workspace = true }
platform-telemetry = { workspace = true }
