[project]
name = "platform-verifier"
version = "0.0.1"
description = "Runs build/test/typecheck/lint and returns structured facts."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.0",
    "platform-db",
]

[tool.uv.sources]
platform-db = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verifier"]
